Fix markdown code preview overflow

--- a/app/javascript/homeland/markdown.scss
+++ b/app/javascript/homeland/markdown.scss
@@ -78,8 +78,8 @@
     font-size: 0.8em;
     background-color: #f6f8fa;
     border: 0px;
-    margin-left: -25px;
-    margin-right: -25px;
+    margin-left: 0;
+    margin-right: 0;
     margin-top: 0;
     padding: 15px 25px;
     color: #444;
